chore: sbt version cross building to check compatibility with sbt 1.4+

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
           java-version: '8'
           cache: 'sbt'
       - name: Execute sbt build
-        run: sbt compile scripted
+        run: sbt ^scripted
